testdata/baselines/reference/compiler/contextuallyTypedFunctionOptionalAndRest.errors.txt
contextuallyTypedFunctionOptionalAndRest.ts(1,24): error TS7006: Parameter 'a' implicitly has an 'any' type.


==== contextuallyTypedFunctionOptionalAndRest.ts (1 errors) ====
    const f: () => void = (a?, ...b) => {};
                           ~~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
    